2009-10-01  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Oliver Hunt.

        Turn on ENABLE_3D_CANVAS in TOT
        https://bugs.webkit.org/show_bug.cgi?id=29906

        Fixed layout tests which failed with flag on

        * fast/canvas/webgl/gl-get-calls.html:
        * fast/dom/Window/window-properties.html:
        * fast/dom/script-tests/constructed-objects-prototypes.js:
        (constructorPropertiesOnWindow):
        * fast/dom/script-tests/prototype-inheritance-2.js:
        (constructorNamesForWindow):
        * fast/dom/script-tests/prototype-inheritance.js:
        * fast/js/script-tests/global-constructors.js:

2009-10-01  Beth Dakin  <bdakin@apple.com>

        Reviewed by Dan Bernstein.

        Updated test results for <rdar://problem/7264725> Re-add a vendor 
        prefix to box-shadow (29927)
        -and corresponding-
        https://bugs.webkit.org/show_bug.cgi?id=29927

        * platform/mac/fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * platform/qt/fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/qt/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * platform/win/fast/css/getComputedStyle/computed-style-expected.txt:
        * platform/win/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * svg/css/getComputedStyle-basic-expected.txt:

2009-10-01  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Adam Roben.

        Added fast/inline/relative-positioned-overflow.html to Skipped list because
        it hits an asssert in Windows debug builds. Assertion failure is being tracked
        by <https://bugs.webkit.org/show_bug.cgi?id=29966>.

        * platform/win/Skipped:

2009-10-01  Beth Dakin  <bdakin@apple.com>

        Rubber-stamped by Sam Weinig.

        Appeasing the Bot. 
