@@ -1,3 +1,13 @@
+2009-10-01  Drew Wilson  <atwilson@chromium.org>
+
+        Reviewed by David Levin.
+
+        Remove clone count from worker-cloneport.html as it's flakey on multi-process ports like Chromium.
+        https://bugs.webkit.org/show_bug.cgi?id=29698
+
+        * fast/workers/worker-cloneport-expected.txt:
+        * fast/workers/worker-cloneport.html:
+
 2009-10-01  Chris Marrin  <cmarrin@apple.com>
 
         Reviewed by Oliver Hunt.
